Use httr native method instead of tracing
To be merged (hopefully) into httr

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,8 +21,9 @@ Encoding: UTF-8
 Imports:
     debugme,
     digest,
-    httr (>= 1.2.1),
+    httr,
     rprojroot,
     storr,
     utils,
     whoami
+Remotes: gaborcsardi/httr@callback
