--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,7 @@ export(stop_recording)
 export(stop_replaying)
 importFrom(debugme,debugme)
 importFrom(digest,digest)
-importFrom(httr,GET)
+importFrom(httr,set_request_callback)
 importFrom(rprojroot,find_root)
 importFrom(rprojroot,is_testthat)
 importFrom(storr,storr_rds)
