mocking_status(), closes #1

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,14 @@
 export(clear_recordings)
 export(del_recording)
 export(list_recordings)
+export(mocking_status)
 export(start_recording)
 export(start_replaying)
 export(stop_recording)
 export(stop_replaying)
 importFrom(debugme,debugme)
 importFrom(digest,digest)
+importFrom(httr,get_callback)
 importFrom(httr,set_callback)
 importFrom(rprojroot,find_root)
 importFrom(rprojroot,is_testthat)
