Introduce contexts, also workaround for #3

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,9 @@ export(start_recording)
 export(start_replaying)
 export(stop_recording)
 export(stop_replaying)
+export(with_httrmock_context)
+importFrom(assertthat,"on_failure<-")
+importFrom(assertthat,assert_that)
 importFrom(debugme,debugme)
 importFrom(digest,digest)
 importFrom(httr,get_callback)
