Need to import utils::tails

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,4 +19,5 @@ importFrom(rprojroot,find_root)
 importFrom(rprojroot,is_testthat)
 importFrom(storr,storr_rds)
 importFrom(utils,packageVersion)
+importFrom(utils,tail)
 importFrom(whoami,username)
