Implement current test workflow
Dcoumentation is missing. :(

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,16 +2,13 @@
 
 export(clear_recordings)
 export(ct)
-export(ct_mock)
-export(ct_mode)
-export(ct_nomock)
-export(ct_record)
+export(ct_get_mode)
 export(del_recording)
 export(getwt)
 export(list_recordings)
+export(pct)
 export(pwt)
 export(setwt)
-export(start_recording)
 importFrom(assertthat,"on_failure<-")
 importFrom(assertthat,assert_that)
 importFrom(debugme,debugme)
