--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,17 +9,26 @@ export(list_recordings)
 export(pct)
 export(pwt)
 export(setwt)
+importFrom(R6,R6Class)
 importFrom(assertthat,"on_failure<-")
 importFrom(assertthat,assert_that)
+importFrom(base64enc,base64decode)
+importFrom(base64enc,base64encode)
 importFrom(debugme,debugme)
-importFrom(digest,digest)
+importFrom(glue,glue)
+importFrom(httr,content)
 importFrom(httr,get_callback)
 importFrom(httr,set_callback)
 importFrom(lintr,get_source_expressions)
 importFrom(rprojroot,find_root)
 importFrom(rprojroot,is_r_package)
 importFrom(rprojroot,is_testthat)
-importFrom(storr,storr_rds)
+importFrom(tools,file_path_sans_ext)
 importFrom(utils,getParseData)
+importFrom(utils,getSrcFilename)
+importFrom(utils,head)
 importFrom(utils,menu)
+importFrom(utils,tail)
 importFrom(whoami,username)
+importFrom(yaml,as.yaml)
+importFrom(yaml,yaml.load)
